tests/ui/consts/issue-68542-closure-in-array-len.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]: Fn<()>` is not satisfied
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^ expected an `Fn<()>` closure, found `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]`
   |
   = help: the trait `~const Fn<()>` is not implemented for closure `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]`
note: the trait `Fn<()>` is implemented for `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]`, but that implementation is not `const`
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^
   = note: wrap the `[closure@$DIR/issue-68542-closure-in-array-len.rs:6:14: 6:16]` in a closure with no arguments: `|| { /* code */ }`

error[E0015]: cannot call non-const closure in constants
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^
   |
   = note: closures need an RFC before allowed to be called in constants
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
